  region.
- fix path concatenation issue in reduce_stitch, str or Path should be allowed.

0.1.40
------
- remove roadblocks for building wheels for cp312.
- update vendored emcee.
- change str.format to f-strings.

0.1.41
------
- bump minimum Python version to 3.9.
- remove oldest-supported-numpy from list of build requirements.
- add "numba_parratt" reflectometry kernel. If numba is installed this kernel
  has greater calculation speed (in calculating the reflectivity) under some
  circumstances.
- fixed bug when exporting parameters from refnx GUI.
- use optionally installed black to format code fragment exported from refnx
  GUI.
- update jax reflectivity kernel to fix deprecated functions.

0.1.42
------
- scale log-prior in log-posterior calculation using a multiplier. This allows
  one to balance relative size of likelihood and prior.
- added Structure.from_slabs classmethod.
- fixed bug when trying to print a Parameter.

0.1.43
------
- Store the fname as a PurePath in Data1D. This is because pickled datafiles
  from one OS may not be unpickleable on another OS. e.g. Posix can't unpickle
  WindowsPath and vice versa.
- modified `util.general.neutron_transmission` to be able to select which cross
  sections are used for transmission calculation.
- We revised the ReflectReduce.write_offspecular to output an ascii file with 
  four columns, qz,qx,m_ref, m_ref_err.
- ReflectModelTL added. Carries out reflectivity for wavelength dependent
  scattering length density profiles.

0.1.44
------
- build against numpy=2
- update gh runners

0.1.45
------
- Stop repeat append of a Parameter to Objective.model.parameters when the
  Objective uses lnsigma, alpha, or auxiliary_params
- reenable pymc tests and update so that it works with pymc5
- add pymc/emcee/dynesty example to show how to use all three packages to
  sample a posterior.
- add jax function for smeared reflectivity.
- optimisation of ReflectModelTL.